--- a/SMS.Web/Views/BringIn/History.cshtml
+++ b/SMS.Web/Views/BringIn/History.cshtml
@@ -185,7 +185,7 @@
                     },
                     {
                         data: function (res) {
-                            return `<a href="/BringIn/BIReport" target="_blank" class="btn btn-print btn-primary btn-standard" id="btnPrint"  title="In báo cáo">
+                            return `<a href="/BringIn/BIReport/${res.ID}" target="_blank" class="btn btn-print btn-primary btn-standard" id="btnPrint"  title="In báo cáo">
                                        <i class="fas fa-print" style="margin-left:-3.5px;"></i>
                                     </a>`;
                         }
